bug fixed :: product pages heading and subheading spacing added

--- a/styles/_var.scss
+++ b/styles/_var.scss
@@ -11,12 +11,12 @@
     // font-size
     --heading:clamp(1.5rem,4vw,3rem); //20px //48px
     --sub-heading:clamp(1.75rem,3vw,2.5rem); 
-    --small-heading:clamp(0.8rem,3vw,1.5rem); //14px //24px
+    --small-heading:clamp(1rem,3vw,1.8rem); //14px //24px
     --c-fs-1:clamp(1.25rem,2.6vw,2rem); 
     --c-fs-2:clamp(1rem,2vw,1.5rem);//16px //24px
     --c-fs-3:clamp(1.15rem,1.5vw,1.25rem); //20px //18px
-    --c-fs-4:clamp(1rem,1.2vw,1.15rem); //16px //18px
-    --c-fs-5:clamp(0.875rem,1vw,0.8rem); 
+    --c-fs-4:clamp(0.8rem,1.2vw,1.15rem); //16px //18px
+    --c-fs-5:clamp(0.875rem,1vw,1rem); 
 
     // colors
     --primary-color: #1E75BA;
